@@ -209,7 +209,7 @@ type type_def =
 	| EClass of string * documentation * type_param list * type_param_flag list * (class_field * pos) list
 	| EEnum of string * documentation * type_param list * enum_param list * (string * documentation * (string * type_path) list * pos) list
 	| ESignature of string * documentation * type_param list * enum_param list * type_path
-	| EImport of (string list * string)
+	| EImport of string list * string * string option
 
 type type_decl = type_def * pos
 
